--- a/Templates/books.html
+++ b/Templates/books.html
@@ -4,8 +4,8 @@
 
 
 <body>
-{% for b in books %}
-    <a href="{% url 'detail' b.pk %}" >{{ b.price }}</a><hr>
+{% for b in book %}
+    <a href="{% url 'detail' b.pk %}" >{{ b.name }}</a><hr>
 {% endfor %}
 
 </body>
